# MEDCU

./: .gitignore  LICENSE  MANIFEST.in  README.md  evaluate.sh  finetune.py  pyproject.toml  requirements.txt
assets/: idk_responses.txt
configs/: medcu_default.yaml
data/MIMIC-Unlearn/: build_pair_pool.py  generate_qa.py
data/Med-Unlearn/coupled/: forget.jsonl  retain.jsonl
data/Med-Unlearn/independent/: forget.jsonl  retain.jsonl
medcu/: __init__.py  cli.py  data.py  evaluate.py  judge.py  method.py  train.py  trainer.py
results/: main-figure-2.csv  main-figure-3.csv  main-figure-4a.csv  main-figure-4b.csv  main-figure-6.csv  main-figure-7a.csv  main-figure-7b.csv  main-figure-8.csv  supplementary-figure-S2.csv  supplementary-figure-S3.csv  supplementary-figure-S4.csv
